# quickjs-wrapper

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  README-CN.md  README.md  build.gradle  bun.lockb  gradle.properties  package.json  publish.sh  remarks.md  settings.gradle
.github/workflows/: chatgpt_cr.yml  code-review.yml  publish.yml
android-wrapper/: build.gradle
android-wrapper/src/androidTest/java/com/whl/quickjs/wrapper/: QuickJSCompileTest.java  QuickJSModuleTest.java  QuickJSTest.java
android-wrapper/src/main/: CMakeLists.txt
android-wrapper/src/main/cpp/: CMakeLists.txt
android-wrapper/src/main/java/com/whl/quickjs/wrapper/: JSFunction.java  JSObject.java
app/: build.gradle
app/src/androidTest/java/com/whl/quickjs/wrapper/sample/: ExampleInstrumentedTest.java  JSFreeValueTest.java  QuickJSFreeJSValueTest.java  QuickJSTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/whl/quickjs/wrapper/sample/: MainActivity.java  Script.java  SecondActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/whl/quickjs/wrapper/sample/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
java-wrapper/src/main/java/com/whl/quickjs/wrapper/: JSArray.java  QuickJSContext.java  QuickJSException.java
native/cpp/: quickjs_context_jni.cpp  quickjs_extend_libraries.cpp  quickjs_extend_libraries.h  quickjs_wrapper.cpp  quickjs_wrapper.h
quickjs-android-wrapper/: build.gradle
quickjs-android-wrapper/src/androidTest/java/com/whl/quickjs/wrapper/: ConsoleLogHelper.java  ExampleInstrumentedTest.java  JSFreeValueTest.java  QuickJSCompileTest.java  QuickJSFreeValueTest.java  QuickJSModuleTest.java  QuickJSPerformanceTest.java  QuickJSTest.java  TestJava.java
quickjs-android-wrapper/src/main/cpp/: context_wrapper.cpp  context_wrapper.h  quickjs_context_jni.cpp  quickjs_wrapper.cpp  quickjs_wrapper.h
quickjs-android-wrapper/src/main/cpp/quickjs/: quickjs.c
quickjs-android-wrapper/src/main/java/com/whl/quickjs/wrapper/: AndroidContextWrapper.java  JSArray.java  JSCallFunction.java  JSFunction.java  JSJavaApi.java  JSMethod.java  JSObject.java  JSValue.java  NativeCleaner.java  QuickJSContext.java  QuickJSException.java
quickjs-android-wrapper/src/test/java/com/whl/quickjs/wrapper/: ExampleUnitTest.java
wrapper-android/: build.gradle  consumer-rules.pro  proguard-rules.pro
wrapper-android/src/androidTest/java/com/whl/quickjs/wrapper/: ConsoleLogTest.java  JSArrayBufferTest.java  QuickJSCompileTest.java  QuickJSFreeValueTest.java  QuickJSModuleTest.java  QuickJSRuntimeTest.java  QuickJSTest.java
wrapper-android/src/main/: AndroidManifest.xml  CMakeLists.txt
wrapper-android/src/main/assets/: test_assert_define.js  test_base_module1.mjs  test_base_module2.mjs  test_module_import_dynamic.js  test_polyfill_date.js
wrapper-android/src/main/cpp/: quickjs_android.cpp
wrapper-android/src/main/java/com/whl/quickjs/android/: QuickJSLoader.java
wrapper-java/: README.md  README.zh-CN.md  build.gradle
wrapper-java/src/main/: CMakeLists.txt
wrapper-java/src/main/java/com/whl/quickjs/wrapper/: JSArray.java  JSCallFunction.java  JSFunction.java  JSModule.java  JSModuleLoader.java  JSObject.java  JSObjectCreator.java  MapCreator.java  MapFilter.java  ModuleLoader.java  QuickJSArray.java  QuickJSContext.java  QuickJSFunction.java  QuickJSObject.java
wrapper-js/extend/libraries/: console.js  date-polyfill.js
wrapper-js/src/: index.mjs
wrapper-js/src/test/: console-test.js
wrapper-js/src/utils/: max-node-fs.mjs
wrapper-js/test/: console-test.js
wrapper-js/test/bench-v8/: combined.js
